--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,37 @@
-dj-database-url
-gunicorn
-Django
-psycopg2-binary
-whitenoise
-
+appnope==0.1.3
+asgiref==3.7.2
+asttokens==2.4.1
+comm==0.2.0
+debugpy==1.8.0
+decorator==5.1.1
+dj-database-url==2.1.0
+Django==5.0.2
+executing==2.0.1
+gunicorn==21.2.0
+ipykernel==6.26.0
+ipython==8.18.0
+jedi==0.19.1
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.8
+packaging==23.2
+parso==0.8.3
+pexpect==4.9.0
+platformdirs==4.0.0
+prompt-toolkit==3.0.41
+psutil==5.9.6
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
+python-dateutil==2.8.2
+pyzmq==25.1.1
+six==1.16.0
+sqlparse==0.4.4
+stack-data==0.6.3
+tornado==6.3.3
+traitlets==5.13.0
+typing_extensions==4.10.0
+wcwidth==0.2.12
+whitenoise==6.6.0
