--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ comm==0.2.0
 debugpy==1.8.0
 decorator==5.1.1
 dj-database-url==2.1.0
-Django==5.0.2
+# Django==5.0.2
 executing==2.0.1
 gunicorn==21.2.0
 ipykernel==6.26.0
